updated C10 part a and part B

--- a/module-C .ipynb
+++ b/module-C .ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,6 @@
     "            new_list.append(v)\n",
     "            \n",
     "    #---your code stops here---\n",
-    "    \n",
     "    return first_indices"
    ]
   },
@@ -108,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +174,7 @@
        "(True, False)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +233,7 @@
        "(True, False)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +299,7 @@
        "([], ['b', 'd', 'f', 'j', 'k', 'q', 'u', 'v', 'w', 'x', 'z'])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +371,7 @@
       "Faulty pangram: \n",
       "unamazingly, this six-word pangram is questionable!\n",
       "Missing letters: \n",
-      "['v', 'j', 'f', 'k', 'c']\n",
+      "['c', 'f', 'j', 'k', 'v']\n",
       "\n"
      ]
     }
@@ -398,11 +397,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "# C6:Function(3/3)\n",
+    "# corrections needed on this function \n",
     "\n",
     "import re\n",
     "import random as ra\n",
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1155,6 @@
    ],
    "source": [
     "# C6:SanityCheck\n",
-    "\n",
     "imposters_fixed = fix_pangrams(potential_pangrams)\n",
     "for sentence, fixed in imposters_fixed:\n",
     "    print(\"Faulty pangram: \")\n",
@@ -1185,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1204,7 @@
        " '4300': {'author': 'James Joyce', 'title': 'Ulysses'}}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,13 +1273,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "# C8:Function(4/4)\n",
-    "\n",
-    "\n",
     "def sentokenize(text, space=True, delims=\".?!\", sentchars=\"a-zA-Z0-9-',;:\"):\n",
     "    sentences = []\n",
     "    \n",
@@ -1319,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1338,7 @@
        " \"Any distruption of this header's formatting will make your group liable to the 2-point deduction.\"]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1374,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1418,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1438,27 +1435,26 @@
    ],
    "source": [
     "# C9:SanityCheck\n",
-    "\n",
     "book_results = get_pangrams(98)\n",
     "print(book_results[1], len(book_results[0]), \"\".join(book_results[0][0]) if book_results[0] else None)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__C10.__ _(8 points)_ Now complete the below function to determine who is the pangrammiest author and what the pangrammiest book is, as determined by most pangrams per sentence. For this part, you must use the `defaultdict`s to store data in the `pangrams_by_author` and `pangrams_by_book` objects.  The first object (`pangrams_by_author`)  should be keyed by `author`, and the second object (`pangrams_by_book`) should be keyed by `(author, book_num)`-tuples. Each object's values should be total list of pangrams and sentence numbers for each grouping of the data. "
+    "__C10.__ _(8 points)_ Now complete the below function to determine who is the pangrammiest author and what the pangrammiest book is, as determined by most pangrams per sentence. For this part, you must use the `defaultdict`s to store data in the `pangrams_by_author` and `pangrams_by_book` objects.  The first object (`pangrams_by_author`)  should be keyed by `author`, and the second object (`pangrams_by_book`) should be keyed by `(title, book_num)`-tuples. Each object's values should be total list of pangrams and sentence numbers for each grouping of the data. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "# C10:Function(4/8)\n",
-    "# make corrections here -- function does not return pangrams_by_book\n",
-    "# ******************\n",
+    "\n",
     "\n",
     "def collect_pangrams(books):\n",
     "    pangrams_by_author = defaultdict(lambda: [[], 0])\n",
@@ -1467,16 +1463,20 @@
     "    #---your code starts here---\n",
     "    for book_num, book_info in books.items():\n",
     "        author = book_info['author']\n",
+    "        title = book_info['title'] \n",
+    "\n",
     "        book_pangrams, num_sentences = get_pangrams(book_num)\n",
     "\n",
     "        pangrams_by_author[author][0].extend(book_pangrams)\n",
     "        pangrams_by_author[author][1] += num_sentences\n",
     "\n",
-    "        pangrams_by_book[(author, book_num)][0].extend(book_pangrams)\n",
-    "        pangrams_by_book[(author, book_num)][1] += num_sentences\n",
+    "        pangrams_by_book[(title, book_num)][0].extend(book_pangrams)\n",
+    "        pangrams_by_book[(title, book_num)][1] += num_sentences\n",
+    "    \n",
     "    #---your code stops here---\n",
-    "\n",
     "    return pangrams_by_author, pangrams_by_book\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1501,7 @@
        "(2, 26842)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,6 +1510,7 @@
     "# C10:SanityCheck\n",
     "\n",
     "pangrams_by_author, pangrams_by_book = collect_pangrams(books)\n",
+    "\n",
     "len(pangrams_by_author[\"Charles Dickens\"][0]), pangrams_by_author[\"Charles Dickens\"][1]"
    ]
   },
@@ -1522,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1535,14 +1536,16 @@
     "    for author, value in pangrams_by_author.items():\n",
     "        pangrams, num_sentences = value\n",
     "        pangram_rate = len(pangrams) / num_sentences\n",
-    "        authors_pangrams_per_sentence.append((author, pangram_rate))\n",
+    "        authors_pangrams_per_sentence.append((pangram_rate, author))\n",
     "\n",
+    "    # loop through each \n",
     "    for book, value in pangrams_by_book.items():\n",
-    "        pangrams, num_sentences = value\n",
+    "        pangrams, num_sentences = value        \n",
     "        pangram_rate = len(pangrams) / num_sentences\n",
-    "        books_pangrams_per_sentence.append((book, pangram_rate))\n",
+    "        books_pangrams_per_sentence.append((pangram_rate, book[0]))\n",
     "\n",
     "    return authors_pangrams_per_sentence, books_pangrams_per_sentence\n",
+    "\n",
     "\n"
    ]
   },
@@ -1578,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1586,27 +1589,25 @@
      "output_type": "stream",
      "text": [
       "In order of decreasing pangrammyness, the authors are: \n",
-      "[('or the Whale; Herman Melville', 0.0003982873643333665),\n",
-      " ('Walt Whitman', 0.00234375),\n",
-      " ('Mary Wollstonecraft (Godwin) Shelley', 0.0),\n",
-      " ('Jane Austen', 0.00023784983746927773),\n",
-      " ('James Joyce', 0.0004067189978443893),\n",
-      " ('Emily Brontë', 0.00034928396786587494),\n",
-      " ('Charles Dickens', 7.4510096118024e-05)]\n",
+      "[(0.00234375, 'Walt Whitman'),\n",
+      " (0.0004067189978443893, 'James Joyce'),\n",
+      " (0.0003982873643333665, 'or the Whale; Herman Melville'),\n",
+      " (0.00034928396786587494, 'Emily Brontë'),\n",
+      " (0.00023784983746927773, 'Jane Austen'),\n",
+      " (7.4510096118024e-05, 'Charles Dickens'),\n",
+      " (0.0, 'Mary Wollstonecraft (Godwin) Shelley')]\n",
       "\n",
-      "In order of decreasing pangrammyness, the books are: \n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "0.0003982873643333665",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[56], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m pprint(\u001b[39msorted\u001b[39m(authors_pangrams_per_sentence,reverse \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m))\n\u001b[0;32m     11\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mIn order of decreasing pangrammyness, the books are: \u001b[39m\u001b[39m\"\u001b[39m )\n\u001b[1;32m---> 12\u001b[0m pprint([(x[\u001b[39m0\u001b[39;49m], books[x[\u001b[39m1\u001b[39;49m]][\u001b[39m'\u001b[39;49m\u001b[39mtitle\u001b[39;49m\u001b[39m'\u001b[39;49m]) \u001b[39mfor\u001b[39;49;00m x \u001b[39min\u001b[39;49;00m \u001b[39msorted\u001b[39;49m(books_pangrams_per_sentence,reverse \u001b[39m=\u001b[39;49m \u001b[39mTrue\u001b[39;49;00m)])\n",
-      "Cell \u001b[1;32mIn[56], line 12\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      9\u001b[0m pprint(\u001b[39msorted\u001b[39m(authors_pangrams_per_sentence,reverse \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m))\n\u001b[0;32m     11\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mIn order of decreasing pangrammyness, the books are: \u001b[39m\u001b[39m\"\u001b[39m )\n\u001b[1;32m---> 12\u001b[0m pprint([(x[\u001b[39m0\u001b[39m], books[x[\u001b[39m1\u001b[39;49m]][\u001b[39m'\u001b[39m\u001b[39mtitle\u001b[39m\u001b[39m'\u001b[39m]) \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m \u001b[39msorted\u001b[39m(books_pangrams_per_sentence,reverse \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m)])\n",
-      "\u001b[1;31mKeyError\u001b[0m: 0.0003982873643333665"
+      "In order of decreasing pangrammyness, the books are: \n",
+      "[(0.00234375, 'Leaves of Grass'),\n",
+      " (0.0004233700254022015, 'Pride and Prejudice'),\n",
+      " (0.0004067189978443893, 'Ulysses'),\n",
+      " (0.0003982873643333665, 'Moby Dick'),\n",
+      " (0.00034928396786587494, 'Wuthering Heights'),\n",
+      " (0.0001268874508311128, \"Oliver Twist or the Parish Boy's Progress\"),\n",
+      " (0.00011956001912960307, 'A Tale of Two Cities'),\n",
+      " (0.0, 'Sense and Sensibility'),\n",
+      " (0.0, 'Great Expectations'),\n",
+      " (0.0, 'Frankenstein, or the Modern Prometheus')]\n"
      ]
     }
    ],
@@ -1617,12 +1618,11 @@
     "\n",
     "authors_pangrams_per_sentence, books_pangrams_per_sentence = compute_pangram_rates(pangrams_by_author, \n",
     "                                                                                   pangrams_by_book)\n",
-    "\n",
     "print(\"In order of decreasing pangrammyness, the authors are: \" )\n",
     "pprint(sorted(authors_pangrams_per_sentence,reverse = True))\n",
     "        \n",
     "print(\"\\nIn order of decreasing pangrammyness, the books are: \" )\n",
-    "pprint([(x[0], books[x[1]]['title']) for x in sorted(books_pangrams_per_sentence,reverse = True)])"
+    "pprint(sorted(books_pangrams_per_sentence, reverse=True))"
    ]
   },
   {
@@ -1634,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1684,9 +1684,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The best pangramming author, Oliver Twist or the Parish Boy's Progress, wrote a 97-character pangram in the book: \n",
+      "\"Oliver Twist or the Parish Boy's Progress\" (booknumber: 730)\n",
+      "\n",
+      "This pangram was: \n",
+      "At least half a\n",
+      "dozen more were severally drawn forth from the same box, and surveyed\n",
+      "with equal pleasure; besides rings, brooches, bracelets, and other\n",
+      "articles of jewellery, of such magnificent materials, and costly\n",
+      "workmanship, that Oliver had no idea, even of their names.\n"
+     ]
+    }
+   ],
    "source": [
     "# C11:SanityCheck\n",
     "\n",
@@ -1699,6 +1715,13 @@
     "      \"\\\" (booknumber: \" + str(most_efficient_book) +\")\\n\\n\" +\n",
     "      \"This pangram was: \\n\" + \"\".join(best_pangram))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
