--- a/module-C .ipynb
+++ b/module-C .ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "(True, False)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "(True, False)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# C6:SanityCheck\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m imposters_fixed \u001b[39m=\u001b[39m fix_pangrams(potential_pangrams)\n\u001b[0;32m      4\u001b[0m \u001b[39mfor\u001b[39;00m sentence, fixed \u001b[39min\u001b[39;00m imposters_fixed:\n\u001b[0;32m      5\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mFaulty pangram: \u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[9], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# C6:SanityCheck\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m imposters_fixed \u001b[39m=\u001b[39m fix_pangrams(potential_pangrams)\n\u001b[0;32m      4\u001b[0m \u001b[39mfor\u001b[39;00m sentence, fixed \u001b[39min\u001b[39;00m imposters_fixed:\n\u001b[0;32m      5\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mFaulty pangram: \u001b[39m\u001b[39m\"\u001b[39m)\n",
       "\u001b[1;31mNameError\u001b[0m: name 'potential_pangrams' is not defined"
      ]
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +577,14 @@
     "    sentences = []\n",
     "    \n",
     "    #---your code starts here---\n",
-    "            \n",
+    "    for i in re.split(\"(\\s*(?<=[\"+delims+\"][^\"+sentchars+\"])\\s*)\", text):\n",
+    "        sentences_list = tokenize(i)\n",
+    "        if not i:\n",
+    "            continue\n",
+    "        elif re.search(\"[\"+sentchars+\"]\", i):\n",
+    "            sentences.append(sentences_list)\n",
+    "        else:\n",
+    "            sentences[-1].extend(sentences_list)  \n",
     "    #---your code stops here---\n",
     "    \n",
     "    return sentences"
@@ -602,9 +609,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Only', ' ', 'add', ' ', 'plain', ' ', 'text', ' ', 'in', ' ', 'the', ' ', 'designated', ' ', 'areas', ',', ' ', 'i', '.', 'e', '.', ',', ' ', 'replacing', ' ', 'the', ' ', 'relevant', ' ', \"'NA's\", '.', ' ', '\\n']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['\\nCompletion of this header is mandatory, subject to a 2-point deduction to the assignment. \\n',\n",
+       " \"Only add plain text in the designated areas, i.e., replacing the relevant 'NA's. \\n\",\n",
+       " 'You must fill out all group member Names and Drexel email addresses in the below markdown list, \\nunder header Module submission group. ',\n",
+       " 'It is required to fill out descriptive notes pertaining to \\nany tutoring support received in the completion of this submission \\nunder the Additional submission comments section at the bottom of the header. \\n',\n",
+       " 'If no tutoring support was received, leave NA in place. \\n',\n",
+       " 'You may as well list other optional comments pertaining to the submission at bottom. \\n',\n",
+       " \"Any distruption of this header's formatting will make your group liable to the 2-point deduction.\\n\"]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# C8:SanityCheck\n",
     "\n",
