--- a/module-C .ipynb
+++ b/module-C .ipynb
@@ -712,15 +712,19 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sentokenize' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# C9:SanityCheck\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m book_results \u001b[39m=\u001b[39m get_pangrams(\u001b[39m98\u001b[39;49m)\n\u001b[0;32m      4\u001b[0m \u001b[39mprint\u001b[39m(book_results[\u001b[39m1\u001b[39m], \u001b[39mlen\u001b[39m(book_results[\u001b[39m0\u001b[39m]), \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(book_results[\u001b[39m0\u001b[39m][\u001b[39m0\u001b[39m]) \u001b[39mif\u001b[39;00m book_results[\u001b[39m0\u001b[39m] \u001b[39melse\u001b[39;00m \u001b[39mNone\u001b[39;00m)\n",
-      "Cell \u001b[1;32mIn[12], line 7\u001b[0m, in \u001b[0;36mget_pangrams\u001b[1;34m(book_num)\u001b[0m\n\u001b[0;32m      5\u001b[0m num_sentences \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m      6\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mdata/books/\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(book_num) \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m.txt\u001b[39m\u001b[39m\"\u001b[39m , \u001b[39m\"\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m----> 7\u001b[0m     \u001b[39mfor\u001b[39;00m sentence \u001b[39min\u001b[39;00m sentokenize(f\u001b[39m.\u001b[39mread()):\n\u001b[0;32m      8\u001b[0m \n\u001b[0;32m      9\u001b[0m         \u001b[39m#---your code starts here---\u001b[39;00m\n\u001b[0;32m     11\u001b[0m         new_sentence \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin([text \u001b[39mfor\u001b[39;00m text \u001b[39min\u001b[39;00m sentence])\n\u001b[0;32m     13\u001b[0m         \u001b[39mif\u001b[39;00m verify(new_sentence) \u001b[39m==\u001b[39m \u001b[39mTrue\u001b[39;00m:\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'sentokenize' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8363 1 Every town-gate and village taxing-house had its band of\n",
+      "citizen-patriots, with their national muskets in a most explosive state\n",
+      "of readiness, who stopped all comers and goers, cross-questioned them,\n",
+      "inspected their papers, looked for their names in lists of their own,\n",
+      "turned them back, or sent them on, or stopped them and laid them in\n",
+      "hold, as their capricious judgment or fancy deemed best for the dawning\n",
+      "Republic One and Indivisible, of Liberty, Equality, Fraternity, or\n",
+      "Death.\n",
+      "\n",
+      "\n"
      ]
     }
    ],
