--- a/module-C .ipynb
+++ b/module-C .ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "(True, False)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "(True, False)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,13 +274,19 @@
     "    letters = set()\n",
     "    \n",
     "    #---your code starts here---\n",
+    "    text = text.lower()\n",
+    "\n",
+    "    for v in (list(ascii_letters)):\n",
     "        \n",
+    "        if (v in text):\n",
+    "            \n",
+    "            letters.add(v)\n",
+    "            \n",
+    "    #print(letters)\n",
+    "\n",
     "    #---your code stops here---\n",
     "    \n",
-    "    # compute the set difference between `all_letters` and `letters` to get the missing letters\n",
-    "    missing_letters = list(all_letters - letters)\n",
-    "    \n",
-    "    return missing_letters\n"
+    "    return list(all_letters.difference(letters))"
    ]
   },
   {
@@ -295,16 +301,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([], ['f', 'w', 'j', 'v', 'b', 'x', 'q', 'k', 'd', 'z', 'u'])"
+       "([], ['z', 'j', 'q', 'f', 'd', 'k', 'w', 'b', 'v', 'x', 'u'])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,26 +367,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Faulty pangram: \n",
-      "show mangled quartz flip vibe exactly.\n",
-      "Missing letters: \n",
-      "['j', 'k']\n",
-      "\n",
-      "Faulty pangram: \n",
-      "unamazingly, this six-word pangram is questionable!\n",
-      "Missing letters: \n",
-      "['f', 'c', 'j', 'v', 'k']\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# C5:SanityCheck\n",
     "\n",
