--- a/module-C .ipynb
+++ b/module-C .ipynb
@@ -328,20 +328,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# C5:Function(5/5)\n",
-    "\n",
-    "potential_pangrams = open(\"data/pangrams.txt\", \"r\", encoding='UTF-8').readlines()\n",
+    "potential_pangrams = open(\"data/pangrams.txt\", \"r\",encoding=\"utf8\").readlines()\n",
     "potential_pangrams = [sentence.strip().lower() for sentence in potential_pangrams]\n",
     "\n",
     "def evaluate_pangrams(sentences):\n",
     "    imposters = []\n",
     "    \n",
     "    #---your code starts here---\n",
-    "            \n",
+    "    \n",
+    "    from string import ascii_lowercase as ascii_letters\n",
+    "    all_letters = list(ascii_letters)\n",
+    "    #print(all_letters)\n",
+    "    \n",
+    "    for row in potential_pangrams:\n",
+    "       # print(row)\n",
+    "        result = verify(row)\n",
+    "        if not result:\n",
+    "            imposters.append(row)\n",
+    "            #for i in all_letters:\n",
+    "             #   if i not in row:\n",
+    "              #      imposters.append(all_letters)\n",
+    "\n",
     "    #---your code stops here---\n",
     "    \n",
     "    return imposters"
@@ -367,9 +379,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Faulty pangram: \n",
+      "show mangled quartz flip vibe exactly.\n",
+      "Missing letters: \n",
+      "['j', 'k']\n",
+      "\n",
+      "Faulty pangram: \n",
+      "unamazingly, this six-word pangram is questionable!\n",
+      "Missing letters: \n",
+      "['j', 'f', 'c', 'k', 'v']\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# C5:SanityCheck\n",
     "\n",
