--- a/module-C .ipynb
+++ b/module-C .ipynb
@@ -420,10 +420,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# C6:Function(3/3)\n",
+    "\n",
     "# C6:Function(3/3)\n",
     "\n",
     "import re\n",
@@ -451,6 +453,39 @@
     "    ra.seed(seed)\n",
     "    \n",
     "    #---your code starts here---\n",
+    "    import re\n",
+    "    #print(\"hi\")\n",
+    "    \n",
+    "    from string import ascii_lowercase as ascii_letters\n",
+    "    all_letters = list(ascii_letters)\n",
+    "    #print(all_letters)\n",
+    "    \n",
+    "    for row in potential_pangrams:\n",
+    "        #print(row)\n",
+    "        result = verify(row)\n",
+    "        if not result:\n",
+    "            temp = row\n",
+    "            #imposters_fixed.append(row)\n",
+    "            row = re.sub(r\".$\", \";\",row)\n",
+    "            #row.replace(-1,';')\n",
+    "     #       print(row)\n",
+    "            temp2 = \"\"\n",
+    "            for i in all_letters:\n",
+    "                #print(\"hi\")\n",
+    "                if i not in temp:\n",
+    "                    #print(i)\n",
+    "                    #all_letters.remove(i)\n",
+    "                   # print(all_letters)\n",
+    "                    temp2 = i + temp2\n",
+    "    #print(temp2)\n",
+    "                    temp3 = row + temp2\n",
+    "                    tup = (temp,temp3)\n",
+    "            imposters_fixed.append(tup)\n",
+    "    #print(imposters_fixed)\n",
+    "            #imposters_fixed.append(i)\n",
+    "                    #print(i)\n",
+    "    #print(imposters_fixed)\n",
+    "            \n",
     "            \n",
     "    #---your code stops here---\n",
     "    \n",
@@ -477,9 +512,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Faulty pangram: \n",
+      "show mangled quartz flip vibe exactly.\n",
+      "Fixed pangram:\n",
+      "show mangled quartz flip vibe exactly;kj\n",
+      "\n",
+      "Faulty pangram: \n",
+      "unamazingly, this six-word pangram is questionable!\n",
+      "Fixed pangram:\n",
+      "unamazingly, this six-word pangram is questionable;vkjfc\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# C6:SanityCheck\n",
     "\n",
