--- a/module-C .ipynb
+++ b/module-C .ipynb
@@ -564,9 +564,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{84: {'title': 'Frankenstein, or the Modern Prometheus',\n",
+       "  'author': 'Mary Wollstonecraft (Godwin) Shelley'},\n",
+       " 98: {'title': 'A Tale of Two Cities', 'author': 'Charles Dickens'},\n",
+       " 161: {'title': 'Sense and Sensibility', 'author': 'Jane Austen'},\n",
+       " 730: {'title': \"Oliver Twist or the Parish Boy's Progress\",\n",
+       "  'author': 'Charles Dickens'},\n",
+       " 768: {'title': 'Wuthering Heights', 'author': 'Emily Brontë'},\n",
+       " 1322: {'title': 'Leaves of Grass', 'author': 'Walt Whitman'},\n",
+       " 1342: {'title': 'Pride and Prejudice', 'author': 'Jane Austen'},\n",
+       " 1400: {'title': 'Great Expectations', 'author': 'Charles Dickens'},\n",
+       " 2701: {'title': 'Moby Dick or the Whale', 'author': 'Herman Melville'},\n",
+       " 4300: {'title': 'Ulysses', 'author': 'James Joyce'}}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# C7:Inline(5/5)\n",
     "\n",
@@ -589,11 +611,43 @@
     "metadata_file = \"data/books/metadata.json\"\n",
     "\n",
     "#---your code starts here---\n",
-    "for book in books_available\n",
-    "    book_number = book.spilt('.')\n",
-    "    book_title = book.spilt(';')\n",
-    "    book_author = book.split(';')\n",
-    "    books = {book_number: {'author': book_author.strip() ,  'title':  book_title.strip() } }\n",
+    "\n",
+    "\n",
+    "\n",
+    "import re\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "\n",
+    "\n",
+    "books_available_split = [i for i in books_available.split('\\n') if i != '']\n",
+    "\n",
+    "\n",
+    "for item in books_available_split:\n",
+    "    author = \"\"\n",
+    "    title = \"\"\n",
+    "    \n",
+    "    \n",
+    "    books_available_split_list= item.split(';')    \n",
+    "    \n",
+    "    book_num_txt = books_available_split_list[0].split('.')\n",
+    "    book_num = int(book_num_txt[0])\n",
+    "    \n",
+    "    if len(books_available_split_list) > 3:\n",
+    "        temp=len(books_available_split_list)-1\n",
+    "        \n",
+    "        for i in range(temp):\n",
+    "            if i != 0:\n",
+    "                title = title.strip()+books_available_split_list[i]        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        author = books_available_split_list[-1].strip()\n",
+    "    else:\n",
+    "        author = books_available_split_list[2].strip()\n",
+    "        title = books_available_split_list[1].strip()\n",
+    "        \n",
+    "    \n",
+    "    books.update({book_num : {'title' : title, 'author' : author}})\n",
     "#---your code stops here---\n",
     "\n",
     "json.dump({k: books[k] for k in sorted(books.keys())}, \n",
